--- a/index.html
+++ b/index.html
@@ -193,13 +193,19 @@
                             <div class="form-group">
 
                                 <input type="file" class="form-control-file" id="File2" aria-describedby="fileHelp">
-                                <small id="fileHelp1" class="form-text text-muted">Upload here any .csv or .xlsx file with data (e.g. Kahoot, Edpuzzle, Socrative results).</small>
+                                <small id="fileHelp2" class="form-text text-muted">Upload here any .csv or .xlsx file with data (e.g. Kahoot, Edpuzzle, Socrative results).</small>
+                                <div id="file2-info">
+                                    <div class="filename"></div>
+                                </div>
                             </div>
 
                             <div class="form-group">
 
                                 <input type="file" class="form-control-file" id="File3" aria-describedby="fileHelp">
-                                <small id="fileHelp2" class="form-text text-muted">Upload here any .csv or .xlsx file with data (e.g. Kahoot, Edpuzzle, Socrative results).</small>
+                                <small id="fileHelp3" class="form-text text-muted">Upload here any .csv or .xlsx file with data (e.g. Kahoot, Edpuzzle, Socrative results).</small>
+                                <div id="file3-info">
+                                    <div class="filename"></div>
+                                </div>
                             </div>
 
                             <ul class="list-inline pull-right">
